# Gravitational-Search-Algorithm-GSA-

./: .gitignore  CMakeLists.txt  GSA.h  MGGSA.h  README.md  animation.py  fitness_logger.h  graph.py  init.h  main.cpp  run.sh
libs/: GSA.h  MGGSA.h  fitness_logger.h  init.h
